[miele] Use framework's HTTP client (#12545)
* Refactor to use framework's Jetty HTTP client
* Do not try to parse HTML as JSON on failed HTTP calls
* Improve handler initialization log messages

Signed-off-by: Jacob Laursen <jacob-github@vindvejr.dk>
Signed-off-by: Simon Dengler <simon.dengler@faps.fau.de>